feature category aprimorada

--- a/notebooks/scrap_infosimple_notebook.ipynb
+++ b/notebooks/scrap_infosimple_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,12 +160,12 @@
     "                product_old_price = list(map(lambda x: float(x.find('div', class_='sku-old-price').get_text(strip=True).replace('$', '')) if x.find('div', class_='sku-old-price') else None, [product]))\n",
     "\n",
     "                # product categorie:\n",
-    "                product_category = categorie\n",
+    "                product_category = [subcategory.get_text(strip=True) for subcategory in soup.find('nav', class_='current-category').find_all('a')]\n",
     "\n",
     "                # product infos\n",
     "                product_info = {'product_id': product_id, 'product_name': product_name, 'product_brand': product_brand, 'product_img_link': product_img_link,\n",
     "                               'product_description': product_description, 'product_available': product_available, 'product_current_price': product_current_price, \n",
-    "                                'product_old_price': product_old_price, 'product_category': categorie}\n",
+    "                                'product_old_price': product_old_price, 'product_category': product_category}\n",
     "\n",
     "                df_subproduct = pd.DataFrame(product_info)\n",
     "                df_all_subproducts = pd.concat([df_all_subproducts, df_subproduct], axis=0)    # todos subprodutos de uma pagina de produto\n",
@@ -177,6 +177,18 @@
     "        df_final = pd.concat([df_final, df_products_category])   \n",
     "\n",
     "    return df_final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://infosimples.github.io/ecommerce-example/products/00147\"\n",
+    "header = {\"user-agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/104.0.0.0 Safari/537.36\"}\n",
+    "page = requests.get(url, headers=header).text\n",
+    "soup = BeautifulSoup(page, 'html.parser')"
    ]
   },
   {
